server/static/wrstat/src/index.css
/* ... */
.prettyTable .reverse {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 82'%3E%3Cpath d='M1,23 h38 l-19,18 z' fill='%23f00'  fill-opacity='1' stroke='%23000' stroke-linejoin='round' /%3E%3Cpath d='M1,20 h38 l-19,-18 z' fill='%23aaa' fill-opacity='0.25' stroke='none' stroke-linejoin='round' /%3E%3C/svg%3E%0A");
}

.prettyTable tbody tr {
  background-color: var(--tableOddBG);
  color: var(--tableOddFont);
}

.prettyTable tbody tr:nth-child(even) {
  background-color: var(--tableEventBG);
  color: var(--tableEvenFont);
}

.prettyTable tbody tr:hover {
  background-color: var(--tableHoverBG);
  color: var(--tableHoverFont);
}

.prettyTable tbody tr.selected {
  background-color: var(--tableSelectedBG);
  color: var(--tableSelectedFont);
}

.prettyTable tbody {
  cursor: pointer;
}

.prettyTable tbody tr td {
  padding: 0.5em 0.25em;
}

#usageTable tbody td:nth-child(3),
#usageTable tbody td:nth-child(4),
#usageTable tbody td:nth-child(5),
#usageTable tbody td:nth-child(6),
#usageTable tbody td:nth-child(7),
#usageTable tbody td:nth-child(8),
#usageTable tbody td:nth-child(9),
#historyTable tbody td:nth-child(2),
#historyTable tbody td:nth-child(3),
#historyTable tbody td:nth-child(4) {
  text-align: right;
  padding-right: 1em;
}

#usageTable tbody td:nth-child(10) {
  text-align: center;
  white-space: nowrap;
}

#historyTable {
  margin-top: 2em;
}

.pagination {
  float: right;
  list-style: none;
  padding: 0;
  user-select: none;
}

.pagination>li {
  display: inline-block;
}

.pagination>li:not(:first-child) {
  margin-left: 0.25em;
}

.pagination .pagination_link {
  cursor: pointer;
  background-color: var(--paginationClickableBG);
  border: 1px solid var(--paginationClickableBorder);
  color: var(--paginationClickableFont);
}

.pagination_link,
.pagination_selected,
.pagination_next,
.pagination_prev {
  padding: 0.1em 0.25em;
  background-color: var(--paginationNonClickableBG);
  border: 1px solid var(--paginationNonClickableBorder);
  color: var(--paginationNonClickableFont);
  border-radius: 4px;
}

.pagination_selected,
#perPage {
  font-weight: bold;
}

#perPage select {
  border: 1px solid var(--perPageBorder);
  background-color: var(--perPageBG);
  color: var(--perPageFont);
  border-radius: 3px;
  padding: 5px;
  background-color: transparent;
  padding: 4px;
  font-weight: bold;
}

#details {
  border-radius: 8px;
  padding: 1em 0.5em;
  max-width: 100vw;
  color: var(--diskTreeDetailsFont);
  background-color: var(--diskTreeDetailsBG);
  border: 1px solid var(--diskTreeDetailsBorder);
  box-sizing: border-box;
}

#details table {
  width: 100%;
  table-layout: fixed;
}

#details th {
  text-align: left;
  width: 5em;
}

#details td div {
  white-space: nowrap;
  overflow-x: hidden;
}

#details td div:hover {
  overflow-x: auto;
}

.download {
  background-repeat: no-repeat;
  background-position: 1em 0.25em;
  background-size: 1.5em 1.5em;
  padding: 0.5em 1em 0.5em 3.5em;
  margin-right: 1em;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M40,0 v35 h-20 l30,30 l30,-30 h-20 v-35 z M0,70 v25 h100 v-25 h-30 l-20,15 l-20,-15 z' fill='%23000' stroke-linejoin='round' stroke-width='5' stroke='%23000' /%3E%3C/svg%3E");
}

.minmax {
  position: relative;
  display: block;
  margin: 0 1em;
  height: calc(1em + 4px + 1em + 1px);
  grid-column: 2 / span 3;
}

.minmax_min,
.minmax_max,
.minmax_minValue,
.minmax_maxValue {
  position: absolute;
  top: 0;
}

.minmax_min,
.minmax_max {
  padding: 2px;
  margin-top: -6px;
  background-color: #aaa;
}

.minmax_min,
.minmax_max {
  background-color: var(--minmaxStaticBG);
  color: var(--minmaxStaticFont);
}

.minmax_setLine,
.minmax_minValue,
.minmax_maxValue {
  color: var(--minmaxRangeFont);
  background-color: var(--minmaxRangeBG);
}

.minmax_min {
  right: 100%;
}

.minmax_max {
  left: 100%;
}

.minmax_line,
.minmax_setLine {
  position: absolute;
  top: calc(1em + 4px + 0.5em - 5px);
  bottom: 5px;
}

.minmax_line {
  left: 0;
  right: 0;
  border-radius: 1em;
  background-color: var(--minmaxLine);
}

.minmax_minValue,
.minmax_maxValue {
  padding: 2px;
  margin-top: -6px;
  border-radius: 3px;
}

.minmax_minSlider,
.minmax_maxSlider {
  position: absolute;
  top: calc(1em + 2px);
  width: 1em;
  height: 1em;
  border-radius: 1em;
  cursor: ew-resize;
  border: 1px solid currentColor;
  background-color: var(--minmaxSlide);
}

#history {
  z-index: 1;
}

#history use {
  cursor: crosshair;
}

#historyInfo {
  position: relative;
  height: 0;
  margin-top: 1.5em;
}

#historyInfo div {
  display: none;
  position: relative;
  z-index: 2;
  border-radius: 5px;
  padding: 5px;
  border: 1px solid var(--historyInfoBorder);
  background-color: var(--historyInfoBG);
  color: var(--historyInfoFont);
}

#historyInfo div:hover {
  display: inline-block;
}

#multi_unix>ul>li:nth-child(n+13) {
  display: none;
}

#multi_unix>ul>li:nth-child(12) {
  visibility: hidden;
}

#multi_unix>ul>li:nth-child(12):before {
  content: "…";
  display: inline-block;
  visibility: visible;
  pointer-events: none;
}

.multiInput ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.multiInput>ul li {
  display: inline-block;
}

.multiInput>ul li:not(:first-child) {
  margin-left: 1em;
  padding: 0 0.5em;
  cursor: cell;
  border: 1px solid currentColor;
}

.multiInput>div {
  height: 0px;
  position: relative;
  z-index: 10;
}

.multiInput>div:not(:focus-within) {
  overflow: hidden;
}

.multiInput>div>div {
  position: absolute;
  background-color: var(--multiInputBG);
  color: var(--multiInputFont);
}

.multiInput>div>div>input {
  box-sizing: border-box;
  width: 100%;
}

.multiInput>div>div ul {
  max-height: 20em;
  overflow-y: scroll;
  border: 0 1px 1px 1px solid currentColor;
}

.minmax_min,
.minmax_max,
.minmax_minValue,
.minmax_maxValue {
  white-space: nowrap;
}

summary {
  cursor: pointer;
}
/* ... */

